# syntropaibox

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
syntropaibox/mcp/: __init__.py  base.py  sandbox.py
